Comment out Snyk code test command
Comment out the Snyk code test command in the buildspec.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       
       # perform a Snyk SCA scan; continue if vulnerabilities are found
       - snyk test || true
-      - snyk code test A
+      #- snyk code test A
       
       # upload a snapshot of the project to Snyk for continuous monitoring
       - snyk monitor
